--- a/public/index.html
+++ b/public/index.html
@@ -12,31 +12,38 @@
       color: #f5f5f5;
       overflow-x: hidden;
       position: relative;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     h1 {
       color: #ffffff;
       font-size: 28px;
       text-align: center;
+      margin-top: 20px;
     }
 
     .patch-note {
       text-align: center;
       font-size: 16px;
       color: #ffffff;
-      margin: 20px auto;
+      margin: 20px 0;
       padding: 10px;
       background-color: #333333;
       border-radius: 8px;
-      width: 80%;
+      width: 90%;
       max-width: 600px;
     }
 
     .photo-container {
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 50px;
       margin-top: 50px;
+      flex-wrap: wrap;
     }
 
     .photo {
@@ -46,25 +53,24 @@
       overflow: hidden;
       position: relative;
       cursor: pointer;
-      transition: filter 0.3s ease;
+      transition: filter 0.3s ease, transform 0.3s ease;
     }
 
     .photo img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-    }
-
-    .photo:hover {
-      filter: blur(5px);
-    }
-
-    .photo:hover ~ .photo {
-      filter: blur(5px);
+      display: block;
     }
 
     .photo-container:hover .photo {
-      filter: none;
+      filter: blur(3px);
+    }
+
+    .photo:hover {
+      filter: none !important;
+      transform: scale(1.05);
+      z-index: 2;
     }
 
     button {
@@ -104,13 +110,14 @@
 
   <!-- Patch Notes -->
   <div class="patch-note">
-    系统更新4月18号：<br>
-    1. 直播间点歌 # 后面有空格也会记录, 中文的#也可以了<br>
+    系统更新 4月18号：<br>
+    1. 直播间点歌 # 后面有空格也会记录，中文的 # 也可以了<br>
     2. 修复时间显示马来西亚时间<br>
-    3. 新增精灵的直播间点歌页面，欢迎精灵使用这个系统
-    ----记得不要删除别人的歌单哟------
+    3. 新增精灵的直播间点歌页面，欢迎精灵使用这个系统<br>
+    —— 记得不要删除别人的歌单哟 —— ❤️
   </div>
 
+  <!-- 图片选择 -->
   <div class="photo-container">
     <div class="photo" id="euniceaiii">
       <img src="img/euniceaiii.jpeg" alt="euniceaiii">
@@ -135,6 +142,7 @@
     setInterval(createSnowflake, 200);
   </script>
 
+  <!-- Click handling -->
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
