--- a/public/nxuan0702.html
+++ b/public/nxuan0702.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>精灵直播间点歌</title>
+  <title>精灵直播后台</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -10,32 +10,35 @@
       background-color: #1e1e1e;
       color: #f5f5f5;
       overflow-x: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      margin: 0;
       padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 32px;
+      margin-bottom: 30px;
     }
 
     .container {
       display: flex;
       justify-content: space-between;
-      width: 100%;
+      gap: 20px;
       max-width: 1200px;
+      margin: 0 auto;
     }
 
     .section {
-      width: 30%;
-      margin: 0 10px;
+      flex: 1;
+      background: #2e2e2e;
       padding: 15px;
-      background-color: #2e2e2e;
       border-radius: 10px;
       box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1);
     }
 
-    h1 {
-      color: #ffffff;
-      font-size: 28px;
+    h2 {
       text-align: center;
+      margin-bottom: 10px;
     }
 
     ul {
@@ -44,46 +47,27 @@
     }
 
     li {
-      background: #333333;
+      background: #333;
       margin: 5px 0;
-      padding: 10px 15px;
+      padding: 10px;
       border-radius: 8px;
-      box-shadow: 0 1px 3px rgba(255, 255, 255, 0.05);
-      transition: background 0.3s;
-    }
-
-    li:hover {
-      background: #444444;
     }
 
     button {
-      background: #ff4b4b;
+      display: block;
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 10px;
       border: none;
-      padding: 10px 20px;
       border-radius: 8px;
+      background-color: #ff4b4b;
       color: white;
-      cursor: pointer;
       font-size: 16px;
-      margin-bottom: 20px;
+      cursor: pointer;
     }
 
     button:hover {
-      background: #e63a3a;
-    }
-
-    .snowflake {
-      position: fixed;
-      top: -10px;
-      color: white;
-      font-size: 1.2em;
-      animation: fall linear infinite;
-      opacity: 0.8;
-      z-index: 9999;
-    }
-
-    @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); }
-      100% { transform: translateY(100vh) rotate(360deg); }
+      background-color: #e63a3a;
     }
 
     .ranking.top-1 {
@@ -92,11 +76,13 @@
       color: #000;
       font-weight: bold;
     }
+
     .ranking.top-2 {
       border: 2px solid silver;
       background: linear-gradient(to right, #e0e0e0, #c0c0c0);
       color: #000;
     }
+
     .ranking.top-3 {
       border: 2px solid #cd7f32;
       background: linear-gradient(to right, #ffcc99, #cd7f32);
@@ -109,21 +95,21 @@
 <h1>🎶 精灵直播间点歌</h1>
 
 <div class="container">
-  <!-- Left Section - Song Requests -->
+  <!-- 点歌列表 -->
   <div class="section">
     <h2>🎵 点歌列表</h2>
     <button id="clearSongListButton">🗑️ 清空点歌列表</button>
     <ul id="requests"></ul>
   </div>
 
-  <!-- Middle Section - Gifts -->
+  <!-- 礼物实时展示（保留内容直到清空） -->
   <div class="section">
     <h2>🎁 礼物实时展示</h2>
     <button id="clearGiftsButton">🗑️ 清空礼物</button>
     <div id="gift-area"></div>
   </div>
 
-  <!-- Right Section - Rankings -->
+  <!-- 排名 -->
   <div class="section">
     <h2>🏆 排名</h2>
     <button id="clearRankingsButton">🗑️ 清空排名</button>
@@ -133,45 +119,26 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  // 飘雪
-  function createSnowflake() {
-    const snowflake = document.createElement('div');
-    snowflake.classList.add('snowflake');
-    snowflake.textContent = '❄️';
-    snowflake.style.left = Math.random() * window.innerWidth + 'px';
-    snowflake.style.animationDuration = (Math.random() * 3 + 2) + 's';
-    snowflake.style.fontSize = (Math.random() * 10 + 10) + 'px';
-    document.body.appendChild(snowflake);
-    setTimeout(() => snowflake.remove(), 5000);
-  }
-  setInterval(createSnowflake, 200);
-
-  // socket
   const socket = io();
   const list = document.getElementById('requests');
   const giftArea = document.getElementById('gift-area');
   const rankingList = document.getElementById('ranking-list');
   let rankings = {};
 
-  // 点歌
-  socket.on('song_request_nxuan0702', (data) => {
+  socket.on('song_request_nxuan0702', data => {
     const li = document.createElement('li');
     const time = data.time || new Date().toLocaleTimeString();
     li.textContent = `[${time}] ${data.user}: ${data.song}`;
     list.appendChild(li);
-    window.scrollTo(0, document.body.scrollHeight);
   });
 
-  // 礼物展示
   function updateGift(gift) {
-    const giftElement = document.createElement('div');
-    giftElement.classList.add('gift');
-    giftElement.textContent = `${gift.user} 送来了 ${gift.giftName || gift.gift}`;
-    giftArea.appendChild(giftElement);
-    setTimeout(() => giftElement.remove(), 1300);
+    const div = document.createElement('div');
+    div.classList.add('gift');
+    div.textContent = `${gift.user} 送来了 ${gift.giftName || gift.gift}`;
+    giftArea.appendChild(div);
   }
 
-  // 排名处理（含Top 3样式）
   function updateRanking(gift) {
     const value = gift.value || gift.count || gift.giftCount || 1;
     if (!rankings[gift.user]) rankings[gift.user] = 0;
@@ -190,29 +157,19 @@
     });
   }
 
-  socket.on('gift_ranking_2', (gift) => {
+  socket.on('gift_ranking_2', gift => {
     updateGift(gift);
     updateRanking(gift);
   });
 
-  // 清除按钮
   document.getElementById('clearSongListButton').addEventListener('click', () => {
-    if (confirm('确定要清空点歌列表吗？')) {
-      fetch('/clear-requests-nxuan0702', { method: 'POST' })
-        .then(res => res.json())
-        .then(result => {
-          if (result.success) {
-            list.innerHTML = '';
-            alert('点歌列表已清空！');
-          } else {
-            alert('清空失败，请检查服务器！');
-          }
-        })
-        .catch(err => {
-          console.error('Error:', err);
-          alert('网络错误，清空失败！');
-        });
-    }
+    fetch('/clear-requests-nxuan0702', { method: 'POST' })
+      .then(res => res.json())
+      .then(result => {
+        if (result.success) {
+          list.innerHTML = '';
+        }
+      });
   });
 
   document.getElementById('clearGiftsButton').addEventListener('click', () => {
