--- a/public/index.html
+++ b/public/index.html
@@ -110,11 +110,11 @@
 
   <!-- Patch Notes -->
   <div class="patch-note">
-    系统更新 4月18号：<br>
-    1. 直播间点歌 # 后面有空格也会记录，中文的 # 也可以了<br>
-    2. 修复时间显示马来西亚时间<br>
-    3. 新增精灵的直播间点歌页面，欢迎精灵使用这个系统<br>
-    —— 记得不要删除别人的歌单哟 —— ❤️
+    系统更新 4月19号：<br>
+    1. 新功能 - 实时动画礼物展览<br>
+    2. 新功能 - TikTok币礼物排行榜，自动调整置顶<br><br>
+
+    —— 乖乖 —— ❤️
   </div>
 
   <!-- 图片选择 -->
