--- a/public/euniceaiii.html
+++ b/public/euniceaiii.html
@@ -12,49 +12,43 @@
       margin: 0;
       padding: 0;
     }
-
     h1 {
       text-align: center;
       font-size: 32px;
       margin: 30px 0 20px;
     }
-
     main.container {
       display: flex;
-      flex-direction: row;
+      flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
       max-width: 1200px;
       margin: 0 auto 40px;
       padding: 0 20px;
     }
-
     .section {
-      flex: 1;
+      flex: 1 1 300px;
       background: #2e2e2e;
       padding: 15px;
       border-radius: 10px;
       box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1);
+      min-height: 300px;
     }
-
     h2 {
       text-align: center;
       margin-bottom: 10px;
       font-size: 20px;
     }
-
-    ul {
+    ul, #gift-area, #ranking-list {
       list-style: none;
       padding: 0;
     }
-
-    li {
+    li, .gift-item, .ranking-item {
       background: #333;
       margin: 5px 0;
       padding: 10px;
       border-radius: 8px;
     }
-
     button {
       display: block;
       width: 100%;
@@ -67,30 +61,25 @@
       font-size: 16px;
       cursor: pointer;
     }
-
     button:hover {
       background-color: #e63a3a;
     }
-
-    .ranking.top-1 {
+    .ranking-item.top-1 {
       border: 2px solid gold;
       background: linear-gradient(to right, #ffe600, #ffd700);
       color: #000;
       font-weight: bold;
     }
-
-    .ranking.top-2 {
+    .ranking-item.top-2 {
       border: 2px solid silver;
       background: linear-gradient(to right, #e0e0e0, #c0c0c0);
       color: #000;
     }
-
-    .ranking.top-3 {
+    .ranking-item.top-3 {
       border: 2px solid #cd7f32;
       background: linear-gradient(to right, #ffcc99, #cd7f32);
       color: #000;
     }
-
     .snowflake {
       position: fixed;
       top: -10px;
@@ -100,7 +89,6 @@
       opacity: 0.8;
       z-index: 9999;
     }
-
     @keyframes fall {
       0% { transform: translateY(0) rotate(0deg); }
       100% { transform: translateY(100vh) rotate(360deg); }
@@ -110,7 +98,7 @@
 <body>
 
 <header>
-  <h1>小嗳直播间后台</h1>
+  <h1>小嗳直播间后台 🎤</h1>
 </header>
 
 <main class="container">
@@ -127,7 +115,7 @@
   </div>
 
   <div class="section">
-    <h2>🏆 排名</h2>
+    <h2>🏆 排名 (TT币)</h2>
     <button id="clearRankingsButton">🗑️ 清空排名</button>
     <div id="ranking-list"></div>
   </div>
@@ -136,65 +124,74 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
   const socket = io();
-  const list = document.getElementById('requests');
+  const requestList = document.getElementById('requests');
   const giftArea = document.getElementById('gift-area');
   const rankingList = document.getElementById('ranking-list');
   let rankings = {};
 
+  // 点歌
   socket.on('song_request_euniceaiii', data => {
     const li = document.createElement('li');
-    const time = data.time || new Date().toLocaleTimeString();
-    li.textContent = `[${time}] ${data.user}: ${data.song}`;
-    list.appendChild(li);
+    li.textContent = `[${data.time}] ${data.user}: ${data.song}`;
+    requestList.appendChild(li);
+  });
+
+  // 礼物
+  socket.on('gift_ranking', data => {
+    updateGift(data);
+    updateRanking(data);
   });
 
   function updateGift(gift) {
     const div = document.createElement('div');
-    div.textContent = `${gift.user} 送来了 ${gift.giftName || gift.gift}`;
+    div.classList.add('gift-item');
+    div.textContent = `${gift.user} 送了 ${gift.giftName} x${gift.giftCount} (${gift.totalDiamonds}币)`;
     giftArea.appendChild(div);
   }
 
   function updateRanking(gift) {
-    const value = gift.value || gift.count || gift.giftCount || 1;
     if (!rankings[gift.user]) rankings[gift.user] = 0;
-    rankings[gift.user] += value;
+    rankings[gift.user] += gift.totalDiamonds;
 
     const sorted = Object.entries(rankings).sort((a, b) => b[1] - a[1]);
     rankingList.innerHTML = '';
+
     sorted.forEach(([user, total], index) => {
       const div = document.createElement('div');
-      div.classList.add('ranking');
-      div.textContent = `${user}: ${total}`;
+      div.classList.add('ranking-item');
+      div.textContent = `${index + 1}. ${user}: ${total} 币`;
+
       if (index === 0) div.classList.add('top-1');
       else if (index === 1) div.classList.add('top-2');
       else if (index === 2) div.classList.add('top-3');
+
       rankingList.appendChild(div);
     });
   }
 
-  socket.on('gift_ranking', gift => {
-    updateGift(gift);
-    updateRanking(gift);
-  });
-
+  // 清空
   document.getElementById('clearSongListButton').addEventListener('click', () => {
     fetch('/clear-requests-euniceaiii', { method: 'POST' })
       .then(res => res.json())
       .then(result => {
-        if (result.success) list.innerHTML = '';
+        if (result.success) requestList.innerHTML = '';
       });
   });
 
   document.getElementById('clearGiftsButton').addEventListener('click', () => {
     giftArea.innerHTML = '';
+    rankings = {};
+    rankingList.innerHTML = '';
+    fetch('/clear-gifts-euniceaiii', { method: 'POST' });
   });
 
   document.getElementById('clearRankingsButton').addEventListener('click', () => {
     rankings = {};
     rankingList.innerHTML = '';
+    fetch('/clear-gifts-euniceaiii', { method: 'POST' });
   });
 
-  // 雪花
+  // 雪花效果
   function createSnowflake() {
     const snowflake = document.createElement('div');
     snowflake.classList.add('snowflake');
