--- a/public/index.html
+++ b/public/index.html
@@ -12,38 +12,31 @@
       color: #f5f5f5;
       overflow-x: hidden;
       position: relative;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
 
     h1 {
       color: #ffffff;
       font-size: 28px;
       text-align: center;
-      margin-top: 20px;
     }
 
     .patch-note {
       text-align: center;
       font-size: 16px;
       color: #ffffff;
-      margin: 20px 0;
+      margin: 20px auto;
       padding: 10px;
       background-color: #333333;
       border-radius: 8px;
-      width: 90%;
+      width: 80%;
       max-width: 600px;
     }
 
     .photo-container {
       display: flex;
       justify-content: center;
-      align-items: center;
       gap: 50px;
       margin-top: 50px;
-      flex-wrap: wrap;
     }
 
     .photo {
@@ -53,24 +46,25 @@
       overflow: hidden;
       position: relative;
       cursor: pointer;
-      transition: filter 0.3s ease, transform 0.3s ease;
+      transition: filter 0.3s ease;
     }
 
     .photo img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: block;
-    }
-
-    .photo-container:hover .photo {
-      filter: blur(3px);
     }
 
     .photo:hover {
-      filter: none !important;
-      transform: scale(1.05);
-      z-index: 2;
+      filter: blur(5px);
+    }
+
+    .photo:hover ~ .photo {
+      filter: blur(5px);
+    }
+
+    .photo-container:hover .photo {
+      filter: none;
     }
 
     button {
@@ -110,14 +104,13 @@
 
   <!-- Patch Notes -->
   <div class="patch-note">
-    系统更新 4月19号：<br>
-    1. 新功能 - 实时动画礼物展览<br>
-    2. 新功能 - TikTok币礼物排行榜，自动调整置顶<br><br>
-
-    —— 乖乖 —— ❤️
+    系统更新4月18号：<br>
+    1. 直播间点歌 # 后面有空格也会记录, 中文的#也可以了<br>
+    2. 修复时间显示马来西亚时间<br>
+    3. 新增精灵的直播间点歌页面，欢迎精灵使用这个系统
+    ----记得不要删除别人的歌单哟------
   </div>
 
-  <!-- 图片选择 -->
   <div class="photo-container">
     <div class="photo" id="euniceaiii">
       <img src="img/euniceaiii.jpeg" alt="euniceaiii">
@@ -142,7 +135,6 @@
     setInterval(createSnowflake, 200);
   </script>
 
-  <!-- Click handling -->
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
